# vela

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
tests/: test_urdf.py
vela/: main.py  shaders.py  stl.py  urdf.py
vela/geometry/: collision.py  mesh.py  simplify.py  urdf.py
vela/geometry/kernels/: reduce_any.cl  reduce_sum.cl  transform_vertices.cl  triangle_intersection.cl
vela/helpers/: stl.py  urdf.py
vela/servo/: follow.py  packets.py  port.py  sts.py
vela/ui/: camera.py  shaders.py
